--- a/src/app/layouts/pages/admin-layout/admin-layout.html
+++ b/src/app/layouts/pages/admin-layout/admin-layout.html
@@ -90,7 +90,7 @@
           <!-- User dropdown -->
           <div class="relative">
             <button class="h-8 w-8 rounded-full overflow-hidden border" (click)="toggleUserMenu()">
-              <img src="/admin-avatar.png" alt="avatar" class="h-full w-full object-cover" />
+              <img src="assets/images/avatar.jpg" alt="avatar" class="h-full w-full object-cover" />
             </button>
 
             <div *ngIf="userMenuOpen" class="absolute right-0 mt-2 w-56 rounded-md border bg-white shadow-lg z-10">
