--- a/src/app/layouts/pages/header-layout/header-layout.html
+++ b/src/app/layouts/pages/header-layout/header-layout.html
@@ -72,7 +72,9 @@
             <button type="button" (click)="toggleMenu()"
               class="relative flex items-center gap-2 rounded-full hover:ring-2 hover:ring-primary focus:outline-none focus:ring-2 focus:ring-primary px-2 py-1"
               aria-haspopup="menu" [attr.aria-expanded]="menuOpen">
-              <span class="text-sm font-medium">user@gmai.com</span>
+              <!-- <span class="text-sm font-medium">{{ fullName() }}</span> -->
+                             <span class="text-sm font-medium">user@gmail.com</span>
+
               <img src="assets/images/avatar.jpg" alt="User" class="h-10 w-10 rounded-full object-cover" />
               <span class="sr-only">Mở menu người dùng</span>
             </button>
